# Polynomial-Manager

./: App.cpp  App.h  CMakeLists.txt  Node.cpp  Node.h  Polynomial.cpp  Polynomial.h  header.h  main.cpp
